src/objects/Change_Details__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Change Details</relationshipLabel>
        <relationshipName>Change_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_API__c</fullName>
        <label>Field API</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_name__c</fullName>
        <description>This field is created for Aqueduct team</description>
        <label>Field name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_State__c</fullName>
        <description>This field is created for Aqueduct team</description>
        <label>New State</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>This field is created for Aqueduct team</description>
        <label>Object</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_State__c</fullName>
        <description>This field is created for Aqueduct team</description>
        <label>Previous State</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Change Details</label>
    <nameField>
        <displayFormat>CD - {0000}</displayFormat>
        <label>Change Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>